nivasa-macros/tests/trybuild/module_set_metadata_empty_value.rs
use nivasa_macros::{module, set_metadata};

#[module({})]
#[set_metadata(key = "tenant", value = " ")]
struct AppModule;

fn main() {}
